--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -1,5 +1,4 @@
 .service-area {
-    margin-top: -96px;
     @include rmaxwd(1400) {
         margin-top: 0;
         padding-top: 70px;
