--- a/sass/partials/_default-spacing.scss
+++ b/sass/partials/_default-spacing.scss
@@ -89,6 +89,11 @@
 }
 
 // margin
+.-mt-lg-96{
+  @include rwd (1400){
+    margin-top: -96px;
+  }
+}
 .mt-lg-20{
   @include rmaxwd(1199){
     margin-top: 20px !important;
